--- a/survey.css
+++ b/survey.css
@@ -1,6 +1,6 @@
 img {
   display: inline-block;
-  margin-left: 6%;
+  /*margin-left: 6%;*/
   flex-grow: 1;
 }
 h1 {
@@ -14,14 +14,31 @@ canvas {
   display: flex;
   position: absolute;
 }
+#resultPage {
+  position: absolute;
+  border: 1px dashed blue;
+  margin-top: -6%;
+  margin-left: .5%;
+  height: 31em;
+  width: 98%;
+  background-color: hsla(209, 36%, -7%, 0.75);;
+}
 button {
+  font-size: 2em;
   font-family: sans-serif;
-  font-weight: lighter;
+  font-weight: 100;
   background-color: #365673;
   color: white;
   border-style: none;
-  height: 6em;
-  width: 16em;
+  height: 9%;
+  width: 100%;
+  margin-top: 36%;
+  position: absolute;
+}
+#imgSec {
+  /*border: 1px dashed red;*/
+  width: 71.9%;
+  margin-left: 11.5%;
 }
 #wdyl {
   width: 60%;
@@ -34,4 +51,7 @@ button {
 }
 .space {
   flex-grow: 2;
+}
+.hideMe {
+  visibility: hidden;
 }
